--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -19,4 +19,4 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis eligendi asper
 <%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail) %>
 </br>
 </br>
-<%= link_to 'Back to our list of cocktails', cocktails_path %>
+<%= link_to 'Back to our list of cocktails', root_path %>
