--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :name %>
 
   <%= f.submit "Create cocktail", class: "btn btn-primary" %>
-  <%= link_to "Back to our list of cocktails", cocktails_path, class: "btn btn-warning" %>
+  <%= link_to "Back to our list of cocktails", root_path, class: "btn btn-warning" %>
 <% end %>
