Gotta work on the css/front...

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,13 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+
+.navbar-gp {
+  justify-content: space-between;
+  background: #28190E;
+
+  h1 {
+    color: white;
+  }
+}
