--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Create a new cocktail</h1>
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
 
   <%= f.submit "Create cocktail", class: "btn btn-primary" %>
   <%= link_to "Back to our list of cocktails", root_path, class: "btn btn-warning" %>
