--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,12 +1,20 @@
-<h1>All our cocktails (<%= @cocktails.count %>)</h1>
-<% @cocktails.each do |cocktail| %>
-  <div class="container">
-    <div class="card">
-      <%= cocktail.name %> 
-      </br>
-      </br>
-      <%= link_to "More info", cocktail_path(cocktail.id), style: "color:blue" %>
-    </div>
-  </div>
-<% end %>
-<%= link_to "Add a new cocktail", new_cocktail_path %>
+<div class="navbar-gp">
+  <h1>Heart of Darkness</h1>
+  <%= link_to "Add a new cocktail", new_cocktail_path, {:style=>'color:white;'} %>
+</div>
+<div class="container">
+  <h2>All our cocktails (<%= @cocktails.count %>)</h2>
+  <% @cocktails.each do |cocktail| %>
+    <div class="row"> 
+      <div class="column">
+        <div class="card">
+          <%= cocktail.name %> 
+          </br>
+          </br>
+          <%= link_to "More info", cocktail_path(cocktail.id), style: "color:blue" %>
+        </div>
+      </div>
+    </div> 
+  <% end %>
+</div>
+
